[package]
name = "rubik_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde ={ version = "1.0.108", features = ["derive"] }
mongodb = { version = "2.7.1" , default-features = false, features = ["sync"] }
dotenv = "0.15.0"
